added id tag to feedback button

--- a/views/index.html
+++ b/views/index.html
@@ -46,7 +46,7 @@
             <label for="message">Your Feedback:</label>
             <textarea id="message" name="message" rows="4" required></textarea>
         </div>
-        <button type="submit">Submit Feedback</button>
+        <button id = "feedbackButton" type="submit">Submit Feedback</button>
     </form>
     </section>
 
